--- a/menu4.html
+++ b/menu4.html
@@ -2,11 +2,10 @@
 <script src="menu4.js"></script>
 
 <body>
-	<h3>SNPixel (Interface Demo)</h3>
+	<h2>SNPixel (Interface Demo)</h2>
 	<p>
 		Powered by Reactome, PyGeno, DeepChem. Demo interface built in JavaScript, jQuery.
 	</p>
-	<br>
 	Select VCF File
 	<br>
 	<select id='vcf'>
@@ -27,7 +26,7 @@
 		<br>
 		Summary
 		<br>
-		<img src="http://i.imgur.com/yE8jgqB.png" />
+		<img src="http://i.imgur.com/yE8jgqB.png"/ width='25%'>
 		<br>
 	</div>
 
@@ -46,7 +45,7 @@
 		<br>
 		Summary
 		<br>
-		<img src="http://i.imgur.com/o87RFuP.png" />
+		<img src="http://i.imgur.com/o87RFuP.png" width='25%'/>
 		<br>
 	</div>
 
@@ -63,9 +62,9 @@
 
 	<div style='display: none' id='fig2'>
 		<br>
-		Summary
-		<br>
-		<img src="http://i.imgur.com/Pcs3Nr1.jpg" />
+		<h4>Reactome</h4>
+		<a href="http://www.reactome.org/PathwayBrowser/#/DTAB=AN&ANALYSIS=MjAxNzA2MjUxNTE0NDVfNDAw" width='100'>
+		Get Analysis</a>
 		<br>
 	</div>
 
