--- a/menu4.html
+++ b/menu4.html
@@ -6,6 +6,9 @@
 	<p>
 		Powered by Reactome, PyGeno, DeepChem. Demo interface built in JavaScript, jQuery.
 	</p>
+	<p>
+		For demo purposes, VCF files are pre-annotated, selections limited, and some calculations pre-loaded.
+	</p>
 	Select VCF File
 	<br>
 	<select id='vcf'>
@@ -45,7 +48,7 @@
 		<br>
 		Summary
 		<br>
-		<img src="http://i.imgur.com/o87RFuP.png" width='25%'/>
+		<img src="http://i.imgur.com/o87RFuP.png" width='50%'/>
 		<br>
 	</div>
 
@@ -63,7 +66,7 @@
 	<div style='display: none' id='fig2'>
 		<br>
 		<h4>Reactome</h4>
-		<a href="http://www.reactome.org/PathwayBrowser/#/DTAB=AN&ANALYSIS=MjAxNzA2MjUxNTE0NDVfNDAw" width='100'>
+		<a href="http://www.reactome.org/PathwayBrowser/#/DTAB=AN&ANALYSIS=MjAxNzA2MjUxNTA4NDBfMzk4">
 		Get Analysis</a>
 		<br>
 	</div>
